# hashlife3d

./: .gitignore  README.md  pyproject.toml
benchmarks/: benchmark.py  memory_benchmark.py
src/hashlife3d/: __main__.py  camera.py  canonical.py  extent.py  grid.py  main.py  node.py  progress.py  state.py  utils.py  video.py
src/hashlife3d/parsers/: __init__.py  mc.py  rle.py
tests/: test_camera.py  test_canonical.py  test_node.py  test_state.py
tests/parsers/: test_rle.py
