[tool.poetry]
name = "hashlife3d"
version = "0.1.0"
description = "HashLife 3D algorithm for Conway's Game of Life"
authors = ["Jo Liss"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6, <3.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
